force-app/main/default/objects/CCR_QureHistory__c/CCR_QureHistory__c.object-meta.xml
<CustomObject>
    <description>Used by: CCR
Description: It&apos;s to store information collected during Qure process for that device.</description>
    <label>Qure History</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>QURE History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qure History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>