force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_Case__c.field-meta.xml
<CustomField>
    <fullName>CCR_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used by: CCR. 
Description: Lookup field to Case.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>QURE_History</relationshipName>
    <type>Lookup</type>
</CustomField>