force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_CodeCovered__c.field-meta.xml
<CustomField>
    <fullName>CCR_CodeCovered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by: CCR. 
Description: It&apos;s to store information if code got as diagnostic result is covered by warranty or not.</description>
    <label>Code Covered by Warranty Goodwill</label>
    <type>Checkbox</type>
</CustomField>