force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_CodeToBeEscalated__c.field-meta.xml
<CustomField>
    <fullName>CCR_CodeToBeEscalated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by: CCR. 
Description: It&apos;s to store information if code got as diagnostic result should be escalated or not.</description>
    <inlineHelpText>If it is Checked, Qure Escalated to Call Center Agent.</inlineHelpText>
    <label>Code To Be Escalated</label>
    <type>Checkbox</type>
</CustomField>