force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_Consumer__c.field-meta.xml
<CustomField>
    <fullName>CCR_Consumer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used by: CCR. 
Description: Lookup field to Contact.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>QURE_History1</relationshipName>
    <type>Lookup</type>
</CustomField>