force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_ConsumerCountry__c.field-meta.xml
<CustomField>
    <fullName>CCR_ConsumerCountry__c</fullName>
    <description>Used by: CCR. 
Description: It&apos;s to store information about the market (country of currently linked consumer).</description>
    <formula>Text(CCR_Consumer__r.CCR_CountryID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumer Country</label>
    <type>Text</type>
</CustomField>