force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_Device__c.field-meta.xml
<CustomField>
    <fullName>CCR_Device__c</fullName>
    <description>Used by: CCR. 
Description: Lookup field to Asset.</description>
    <label>Device</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>QURE_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>