force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_DiagnosticResult__c.field-meta.xml
<CustomField>
    <fullName>CCR_DiagnosticResult__c</fullName>
    <description>Used by: CCR 
Description: It stores the unique code list for the diagnostic result used in QURE configuration and Device configuration</description>
    <label>Diagnostic Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCR_DiagnosticResult</valueSetName>
    </valueSet>
</CustomField>