force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_EligibilityByCarePlus__c.field-meta.xml
<CustomField>
    <fullName>CCR_EligibilityByCarePlus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to store information if replacement is eligible by Care+ (check if &quot;Care+ Requested&quot; field is true &amp; if issue code is covered by Care+)</description>
    <label>Eligibility by Care+</label>
    <type>Checkbox</type>
</CustomField>