force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_EligibilityResult__c.field-meta.xml
<CustomField>
    <fullName>CCR_EligibilityResult__c</fullName>
    <description>It&apos;s to store information if device is eligible for replacement or not.</description>
    <label>Eligibility Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCR_ReplacementEligibilityResult</valueSetName>
    </valueSet>
</CustomField>