force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_EligibilitySubscription__c.field-meta.xml
<CustomField>
    <fullName>CCR_EligibilitySubscription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used By: CCR 
Description: This field is used to have the Subscription Eligibility details</description>
    <label>Eligibility Subscription</label>
    <type>Checkbox</type>
</CustomField>