force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_EmailNotificationSent__c.field-meta.xml
<CustomField>
    <fullName>CCR_EmailNotificationSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used By: CCR
Description: This field is checked once Email notification sent  for the Courier Delivery, Fase to Face &amp; Pick up at store replacement channels selected.</description>
    <label>Email Notification Sent</label>
    <type>Checkbox</type>
</CustomField>