force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_EndDateforeligibility_checks__c.field-meta.xml
<CustomField>
    <fullName>CCR_EndDateforeligibility_checks__c</fullName>
    <label>End Date for eligibility checks</label>
    <type>DateTime</type>
</CustomField>