force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_EndDateforpreeligibilitychecks__c.field-meta.xml
<CustomField>
    <fullName>CCR_EndDateforpreeligibilitychecks__c</fullName>
    <label>End Date for pre-eligibility checks</label>
    <type>DateTime</type>
</CustomField>