force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_EndDateforreplacementreasonselectio__c.field-meta.xml
<CustomField>
    <fullName>CCR_EndDateforreplacementreasonselectio__c</fullName>
    <label>End Date for replacement reason selectio</label>
    <type>DateTime</type>
</CustomField>