force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_EndDiagnostic__c.field-meta.xml
<CustomField>
    <fullName>CCR_EndDiagnostic__c</fullName>
    <description>Used by: CCR. 
Description: It&apos;s to store information when Diagnostic ends.</description>
    <label>End Diagnostic</label>
    <type>DateTime</type>
</CustomField>