force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_InWarranty__c.field-meta.xml
<CustomField>
    <fullName>CCR_InWarranty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by: CCR
Description: Field used to store information if device during the Qure was out of warranty or not.</description>
    <label>In Warranty</label>
    <type>Checkbox</type>
</CustomField>