force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_LimitedEdition__c.field-meta.xml
<CustomField>
    <fullName>CCR_LimitedEdition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by: CCR. 
Description: It&apos;s to store information if device is from limited edition or not.</description>
    <label>Limited Edition</label>
    <type>Checkbox</type>
</CustomField>