force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_MaxReplacementsForCodeNotReached__c.field-meta.xml
<CustomField>
    <fullName>CCR_MaxReplacementsForCodeNotReached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by: CCR. 
Description: It&apos;s to store information if max number of replacements for specific code for device is reached or not.</description>
    <label>Max Replacements For Code Not Reached</label>
    <type>Checkbox</type>
</CustomField>