force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_NotMaxNumbersofReplacement__c.field-meta.xml
<CustomField>
    <fullName>CCR_NotMaxNumbersofReplacement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by: CCR Description: It&apos;s to store information if max # of replacements for device has been reached.</description>
    <inlineHelpText>If it is Checked, Qure Escalated to Call Center Agent.</inlineHelpText>
    <label>Not Max Numbers of Replacement</label>
    <type>Checkbox</type>
</CustomField>