force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_Override__c.field-meta.xml
<CustomField>
    <fullName>CCR_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It&apos;s to store information if Qure process has been overwritten.</description>
    <label>Override</label>
    <type>Checkbox</type>
</CustomField>