force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_OverrideReason__c.field-meta.xml
<CustomField>
    <fullName>CCR_OverrideReason__c</fullName>
    <description>It&apos;s to store information about the reason of overwriting.</description>
    <label>Override Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unsatisfied customer</fullName>
            </value>
            <value>
                <fullName>Warranty Expiration</fullName>
            </value>
            <value>
                <fullName>Product issue not covered by fault tree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>