force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_QureChannel__c.field-meta.xml
<CustomField>
    <fullName>CCR_QureChannel__c</fullName>
    <description>Used by: CCR. 
Description: It&apos;s to store information using which channel Qure process has been performed (ecommerce, service center, call center).</description>
    <label>Qure Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Service Center</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Flagship Store</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Retailer Light</fullName>
            </value>
            <value>
                <fullName>Shift</fullName>
            </value>
            <value>
                <fullName>Shift Light</fullName>
            </value>
            <value>
                <fullName>Mobile App</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>