force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_QureInUnlimitedPeriod__c.field-meta.xml
<CustomField>
    <fullName>CCR_QureInUnlimitedPeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used By: CCR
Description: This field is to identify the QURE done in Unlimited Period.</description>
    <label>Qure In Unlimited Period</label>
    <type>Checkbox</type>
</CustomField>