force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_QureReplacementChannel__c.field-meta.xml
<CustomField>
    <fullName>CCR_QureReplacementChannel__c</fullName>
    <description>It&apos;s to store Qure replacement channels.</description>
    <label>Qure Replacement Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCR_QureReplacementChannel</valueSetName>
    </valueSet>
</CustomField>