force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_ReplacementChannelSelectedBy__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplacementChannelSelectedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used By: CCR 
Description: Replacement Channel Selected user in QURE</description>
    <label>Replacement Channel Selected By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Qure_History</relationshipName>
    <type>Lookup</type>
</CustomField>