force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_StartDateforeligibilitychecks__c.field-meta.xml
<CustomField>
    <fullName>CCR_StartDateforeligibilitychecks__c</fullName>
    <label>Start Date for eligibility checks</label>
    <type>DateTime</type>
</CustomField>