force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_StartDateforpreeligibilitychecks__c.field-meta.xml
<CustomField>
    <fullName>CCR_StartDateforpreeligibilitychecks__c</fullName>
    <label>Start Date for pre-eligibility checks</label>
    <type>DateTime</type>
</CustomField>