force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_StartDateforreplacementreason_select__c.field-meta.xml
<CustomField>
    <fullName>CCR_StartDateforreplacementreason_select__c</fullName>
    <label>Start Date for replacement reason select</label>
    <type>DateTime</type>
</CustomField>