force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_StartDiagnostic__c.field-meta.xml
<CustomField>
    <fullName>CCR_StartDiagnostic__c</fullName>
    <description>Used by: CCR. 
Description: It&apos;s to store information when diagnostic process starts.</description>
    <label>Start Diagnostic</label>
    <type>DateTime</type>
</CustomField>