force-app/main/default/objects/CCR_QureHistory__c/fields/CCR_Status__c.field-meta.xml
<CustomField>
    <fullName>CCR_Status__c</fullName>
    <description>this field is used in qure process that indicates record is active or not.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>