force-app/main/default/objects/CCR_QureHistory__c/fields/KDCE_MigId__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MigId__c</fullName>
    <externalId>true</externalId>
    <label>KDCE_MigId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>