force-app/main/default/objects/CCR_QureHistory__c/fields/KDCE_QureContactPhone__c.field-meta.xml
<CustomField>
    <fullName>KDCE_QureContactPhone__c</fullName>
    <label>KDCE_QureContactPhone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>