force-app/main/default/objects/CCR_QureHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CCR_QureChannel__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CCR_Device__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>